--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "client": "webpack-dev-server --config ./webpack.config.dev.js --devtool inline-source-map --hot",
     "server": "nodemon server/index.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "webpack --mode production --config ./webpack.config.prod.js"
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "axios": "^0.18.0",
