--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-stripe-checkout": "^2.6.3",
+    "react-svg": "^4.1.7",
     "redux": "^4.0.0",
     "redux-form": "^7.3.0",
     "redux-thunk": "^2.3.0",
