--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "npm run build"
   },
+  "engines": {
+    "node": "9.11.1",
+    "npm": "5.6.0"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "babel-runtime": "^6.26.0",
