--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
-    "start": "NODE_ENV=production node server/index.js",
-    "build": "NODE_ENV=production webpack --mode production --config ./webpack.config.prod.js",
+    "start": "node server/index.js",
+    "build": "webpack --mode production --config ./webpack.config.prod.js",
     "client": "webpack-dev-server --config ./webpack.config.dev.js --devtool inline-source-map --hot",
     "server": "nodemon server/index.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
