--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "babel-runtime": "^6.26.0",
     "compression": "^1.7.2",
     "express": "^4.16.3",
+    "import": "0.0.6",
     "mongoose": "^5.1.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-instagram-embed": "^1.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-stripe-checkout": "^2.6.3",
